force-app/main/default/objects/HAM_Badge__mdt/HAM_Badge__mdt.object-meta.xml
<CustomObject>
    <label>HAM Badge</label>
    <pluralLabel>HAM Badges</pluralLabel>
</CustomObject>