force-app/main/default/objects/HAM_Badge__mdt/fields/HAM_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Display_Name__c</fullName>
    <label>HAM Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>