force-app/main/default/objects/HAM_Badge__mdt/fields/HAM_Image_Path__c.field-meta.xml
<CustomField>
    <fullName>HAM_Image_Path__c</fullName>
    <label>HAM Image Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>