force-app/main/default/objects/HAM_Badge__mdt/fields/HAM_Mapping_Field_API__c.field-meta.xml
<CustomField>
    <fullName>HAM_Mapping_Field_API__c</fullName>
    <label>HAM Mapping Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>